legacy/elan3/tools/Completion/src/completion/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
    package completion.parser;
import java.io.*;
import java.util.*;
import completion.*;

public class Parser implements ParserConstants {

    private static final int KBC_OPEN = 1;
    private static final int KBC_SAVE = 2;
    private static final int ORIENT = 3;
    private static final int CRITIC = 4;
    private static final int COMPLETION = 5;

    /* Fields for the critical pairs parser */
    private String error = "";
    private String warning = "";
    private boolean okForPrec = true;
    private Vector pairs = null;
    private Vector operators = null;
    private Vector variables = null;
    private Vector rules = null;
    private Vector prio = null;


    public Parser(Vector op, Vector va, ByteArrayInputStream ba){
        this(ba);
        operators = op;
        variables = va;
        prio = new Vector();
        error = "";
    }

    public Vector getVariables(){
        return variables;
    }

    public Vector getOperators(){
        return operators;
    }

    public Vector getRules(){
        return rules;
    }

    public String getWarning(){
        return warning;
    }



    /* Method for Orient  and Completion */
    private void addRule(Rule r){
        if(rules == null)
            rules = new Vector();
        rules.add(r);
    }

    private void addRuleInHead(Rule r){
        if(rules == null)
            rules = new Vector();
        rules.insertElementAt(r, 0);
    }

    /* method for System */
    private void addOp(OpTree op, int choice){//, int arity){
        boolean ok = true;
        if(operators == null)
            operators = new Vector();
        for(int i = 0; i < variables.size(); i++){
            if(op.getName().equals(((String) variables.get(i)))){
                ok = false;
                break;
            }
        }
        if(ok){
            for(int i = 0; i < operators.size(); i++){
                if(op.getName().equals(((Operator) operators.get(i)).getName())){
                    ok = false;
                    if(op.nbChildren() != ((Operator) operators.get(i)).getArity()){
                        if(((Operator) operators.get(i)).getArity() != -1)
                            error += "Invalid arity for operator " + op + "\n";
                        else
                            ((Operator) operators.get(i)).setArity(op.nbChildren());
                    }
                    break;
                }
            }
        }
        if(ok){
            if(choice == KBC_SAVE)
                error += "Error : identifier " + op.getName() + " is not defined.\n";
            else
                warning += "Warning : identifier " + op.getName() + " is not defined. Will be defined as an operator.\n";
            operators.add(new Operator(op.getName(), op.nbChildren(), 0));
        }
    }

    /* Methods for Precedance */
    public boolean exists(String n){
        boolean b = false;
        for(int i = 0; i < prio.size(); i++){
            if(((OpTree) prio.get(i)).getName().equals(n)){
                b = true;
                break;
            }
        }
        return b;
    }

    public OpTree find(String n){
        if(exists(n)){
            int r = 0;
            for(int i = 0; i < prio.size(); i++){
                if(((OpTree) prio.get(i)).getName().equals(n)){
                    r = i;
                    break;
                }
            }
            return (OpTree) prio.get(r);
        }
        else {
            return null;
        }
    }

    public void findLoop(int choice){
        try{
            for(int i = 0; i < prio.size(); i++){
                Vector list = ((OpTree) prio.get(i)).getAllDescendant();
            }
        }
        catch(Exception e){
            if(choice == KBC_OPEN)
                warning += e.getMessage();
            else
                error += e.getMessage();
            okForPrec = false;
        }
    }

    public void findPrec(){
        if(operators == null)
            operators = new Vector();
        for(int i = 0; i < prio.size(); i++){
            operators = ((OpTree) prio.get(i)).doPrec(operators, 0);
        }
    }

    /* for parsing the kbc file */
    public boolean isVariable(String s){
        boolean b = false;
        for(int i = 0; i < variables.size(); i++){
            if(s.equals((String) variables.get(i))){
                b = true;
                break;
            }
        }
        return b;
    }

    public boolean isOperator(String s){
        boolean b = false;
        for(int i = 0; i < operators.size(); i++){
            if(s.equals(((Operator) operators.get(i)).getName())){
                b = true;
                break;
            }
        }
        return b;
    }

    public void setPriority(String name, int p){
        for(int i = 0; i < operators.size(); i++){
            if(name.equals(((Operator) operators.get(i)).getName())){
                ((Operator) operators.get(i)).setPriority(p);
                break;
            }
        }
    }

    private void checkUnusedOperators(){
        for(int i = 0; i < operators.size();){
            if(((Operator) operators.get(i)).getArity() == -1){
                warning += "Warning : the operator '" + ((Operator) operators.get(i)).getName() + "' is not used in the system.\n";
                operators.removeElementAt(i);
            }
            else
                i++;
        }
    }

  final public Vector precedanceList() throws ParseException {
    Vector list, blist, blist1 = null;
    blist = precedance();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDF:
      blist1 = precedanceList();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
                if(blist1 == null)
                    blist1 = new Vector();
                blist1.insertElementAt(blist, 0);
                {if (true) return blist1;}
    throw new Error("Missing return statement in function");
  }

  final public Vector precedance() throws ParseException {
    Vector rlist = null, list = null;
    Vector llist = null;
    Vector blist = null;
    //( LOOKAHEAD(2) 
          llist = operatorList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INF:
      jj_consume_token(INF);
      rlist = operatorList();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INF:
        blist = endPrecedance();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
              if(rlist != null){
                  if(blist != null){
                      for(int i = 0; i < rlist.size(); i++){
                          ((OpTree) rlist.get(i)).addChildren(blist);
                      }
                  }
                  for(int i = 0; i < llist.size(); i++){
                      ((OpTree) llist.get(i)).addChildren(rlist);
                  }
              }
              {if (true) return llist;}
    throw new Error("Missing return statement in function");
  }

  final public Vector endPrecedance() throws ParseException {
    Vector list = null;
    Vector blist = null;
    jj_consume_token(INF);
    list = operatorList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INF:
      blist = endPrecedance();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
            if(list != null){
                if(blist != null){
                    for(int i = 0; i < list.size(); i++){
                        int index;
                        if((index = ((OpTree) list.get(i)).isIn(prio)) >= 0)
                            ((OpTree) prio.get(index)).addChildren(blist);
                    }
                }
                {if (true) return list;}
            }
            else
                {if (true) return blist;}
    throw new Error("Missing return statement in function");
  }

  final public Vector operatorList() throws ParseException {
    Token id = null;
    Vector list = null;
    id = jj_consume_token(IDF);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VIRG:
      jj_consume_token(VIRG);
      list = operatorList();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
            if(isVariable(id.image)){
                warning += "Warning : " + id.image + " is already defined as a variable. \n";
                {if (true) return list;}
            }
            if(prio == null)
                prio = new Vector();
            if(! exists(id.image)){
                OpTree ident = new OpTree(id.image);
                prio.add(ident);
            }
            if(list == null)
                list = new Vector();
            list.add(find(id.image));
            {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

/* for orientation */
  final public Vector inputOrient() throws ParseException {
    jj_consume_token(RES);
    jj_consume_token(EQ);
    ruleList();
    jj_consume_token(0);
            {if (true) return rules;}
    throw new Error("Missing return statement in function");
  }

  final public void ruleList() throws ParseException {
    rule(ORIENT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PERCENT:
      jj_consume_token(PERCENT);
      ruleList();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
  }

  final public Vector inputCP() throws ParseException {
    jj_consume_token(RES);
    jj_consume_token(EQ);
    result();
    jj_consume_token(0);
            {if (true) return pairs;}
    throw new Error("Missing return statement in function");
  }

  final public void result() throws ParseException {
    Pair p = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CP:
      jj_consume_token(CP);
      jj_consume_token(PARO);
      p = pair();
      jj_consume_token(PARF);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRG:
        jj_consume_token(VIRG);
        result();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      break;
    case NIL:
      jj_consume_token(NIL);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
            if(p != null){
                if(pairs == null)
                    pairs = new Vector();
                pairs.add(p);
            }
  }

  final public Pair pair() throws ParseException {
    Token n1, n2;
    OpTree op1, op2, op3, op4;
    Vector u, l, r1, r2;
    Pair pair;
    op1 = member(CRITIC);
    jj_consume_token(VIRG);
    op2 = member(CRITIC);
    jj_consume_token(VIRG);
    u = substitution();
    jj_consume_token(VIRG);
    l = list();
    jj_consume_token(VIRG);
    r1 = substitution();
    jj_consume_token(VIRG);
    r2 = substitution();
    jj_consume_token(VIRG);
    op3 = member(CRITIC);
    jj_consume_token(VIRG);
    op4 = member(CRITIC);
    jj_consume_token(VIRG);
    n1 = jj_consume_token(NUMBER);
    jj_consume_token(VIRG);
    n2 = jj_consume_token(NUMBER);
            op1.setFlag(l);
            pair = new Pair(op1, op2, op3, op4, u, r1, r2, Integer.parseInt(n1.image), Integer.parseInt(n2.image));
            {if (true) return pair;}
    throw new Error("Missing return statement in function");
  }

  final public OpTree member(int choice) throws ParseException {
    Token id1 = null, id2 = null, n = null;
    Vector v = null;
    OpTree tree = null;
    if (jj_2_1(2)) {
      id1 = jj_consume_token(IDF);
      jj_consume_token(PARO);
      v = args(choice);
      jj_consume_token(PARF);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDF:
        id2 = jj_consume_token(IDF);
        break;
      case VAR:
        jj_consume_token(VAR);
        jj_consume_token(PARO);
        n = jj_consume_token(NUMBER);
        jj_consume_token(PARF);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
            if(id1 != null)
                tree = new OpTree(id1.image, v);
            else if(id2 != null)
                tree = new OpTree(id2.image);
            else
                tree = new OpTree("var("+n.image+")");
            if(choice == KBC_OPEN || choice == KBC_SAVE)
                addOp(tree, choice);
            {if (true) return tree;}
    throw new Error("Missing return statement in function");
  }

  final public Vector args(int choice) throws ParseException {
    OpTree tree;
    Vector v = null;
    tree = member(choice);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VIRG:
      jj_consume_token(VIRG);
      v = args(choice);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
            if(v == null)
                v = new Vector();
            v.insertElementAt(tree, 0);
            {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  final public Vector substitution() throws ParseException {
    String v = null, v1 = null;
    Token i = null;
    OpTree t = null;
    Substitution s = null;
    Vector list = null;
    if (jj_2_2(2)) {
      v = var();
      jj_consume_token(ARROW);
      t = member(CRITIC);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDF:
        i = jj_consume_token(IDF);
        jj_consume_token(ARROW);
        v1 = var();
        break;
      case ID:
        jj_consume_token(ID);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMPOSE:
      jj_consume_token(COMPOSE);
      list = substitution();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
            if(list == null)
                list = new Vector();
            if(v != null){
                s = new Substitution(v, t);
                list.insertElementAt(s, 0);
            }
            else if(v1 != null){
                s = new Substitution(i.image, new OpTree(v1));
                list.insertElementAt(s, 0);
            }
            {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  final public String var() throws ParseException {
    Token n = null;
    jj_consume_token(VAR);
    jj_consume_token(PARO);
    n = jj_consume_token(NUMBER);
    jj_consume_token(PARF);
            {if (true) return "var(" + n.image + ")";}
    throw new Error("Missing return statement in function");
  }

  final public Vector list() throws ParseException {
    Token n = null;
    Vector v = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUMBER:
      n = jj_consume_token(NUMBER);
      jj_consume_token(VIRG);
      v = list();
      break;
    case NIL:
      jj_consume_token(NIL);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
            if(n != null){
                if(v == null)
                    v = new Vector();
                v.insertElementAt(n.image, 0);
            }
            {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  final public Vector inputCompletion() throws ParseException {
    jj_consume_token(RES);
    jj_consume_token(EQ);
    rule(COMPLETION);
    jj_consume_token(0);
            {if (true) return rules;}
    throw new Error("Missing return statement in function");
  }

  final public void rule(int choice) throws ParseException {
    OpTree left = null, right = null;
    if (jj_2_3(2)) {
      left = member(choice);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ARROW:
        jj_consume_token(ARROW);
        break;
      case EQ:
        jj_consume_token(EQ);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = member(choice);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRG:
      case NIL:
      case VAR:
      case IDF:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRG:
          jj_consume_token(VIRG);
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
        rule(choice);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NIL:
        jj_consume_token(NIL);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
            if(left != null){
                if(choice == ORIENT)
                    addRule(new Rule(left, right));
                else
                    addRuleInHead(new Rule(left, right));
            }
  }

  final public String inputKbc(int choice) throws ParseException {
    Vector v = null;
    jj_consume_token(VARS);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDF:
      varList();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(PREC);
    v = precedanceList();
            if(v != null){
                findLoop(choice);
                if(error.equals("") && okForPrec)
                    findPrec();
            }
    jj_consume_token(SYST);
    rule(choice);
    jj_consume_token(0);
            checkUnusedOperators();
            {if (true) return error;}
    throw new Error("Missing return statement in function");
  }

  final public void varList() throws ParseException {
    Token id = null;
    id = jj_consume_token(IDF);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDF:
      varList();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
            if(variables == null)
                variables = new Vector();
            if(isVariable(id.image))
                error += "the variable " + id.image + " is already defined\n";
            variables.add(id.image);
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_3_1() {
    if (jj_scan_token(IDF)) return true;
    if (jj_scan_token(PARO)) return true;
    return false;
  }

  final private boolean jj_3R_2() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_1()) {
    jj_scanpos = xsp;
    if (jj_scan_token(27)) {
    jj_scanpos = xsp;
    if (jj_3R_3()) return true;
    }
    }
    return false;
  }

  final private boolean jj_3R_1() {
    if (jj_scan_token(VAR)) return true;
    if (jj_scan_token(PARO)) return true;
    return false;
  }

  final private boolean jj_3_2() {
    if (jj_3R_1()) return true;
    return false;
  }

  final private boolean jj_3_3() {
    if (jj_3R_2()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(3)) {
    jj_scanpos = xsp;
    if (jj_scan_token(6)) return true;
    }
    return false;
  }

  final private boolean jj_3R_3() {
    if (jj_scan_token(VAR)) return true;
    if (jj_scan_token(PARO)) return true;
    return false;
  }

  public ParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  public Token token, jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  public boolean lookingAhead = false;
  private boolean jj_semLA;
  private int jj_gen;
  final private int[] jj_la1 = new int[19];
  static private int[] jj_la1_0;
  static {
      jj_la1_0();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0x8000000,0x200,0x200,0x200,0x2,0x800,0x2,0xa000,0x8010000,0x2,0x8004000,0x20000,0x2008000,0x48,0x2,0x8018002,0x8000,0x8000000,0x8000000,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[3];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  public Parser(java.io.InputStream stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public void ReInit(java.io.InputStream stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public Parser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public Parser(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 19; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  final private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }
